   webpage. The two scripts are not disabled by default.
 - Added explicit menu items for switching to the previous and next input
   methods. Previously, keys for cycling methods would move around as the input
   method changed, but this approach caused problems in Mac OS X.
 - Options such as input method can no longer be changed when AVIM is disabled.
   Before, the menu items for these options were disabled, but the keyboard
   shortcuts were still active.

Version 20080224.139 (Tuesday, July 29, 2008)
 - Added French localization.
 - Added support for beta versions of Flock 2.
 - Added support for applications built atop Mozilla Prism (WebRunner).
 - Added support for alpha versions of Mozilla Thunderbird 3.
 - Single-line textboxes no longer jump to the beginning whenever adding
   diacritics to words.
 - Fixed an issue where the script monitor would disable the extension when
   typing in the Bookmarks sidebar's filter bar.
 - Fixed behavior on editable menulists (combo boxes), used in Google Toolbar
   and Firefox's Live Titles feature.
 - Added support for editable trees.
 - Reduced the number of undo/redo levels created when adding diacritics,
   speeding up typing in textboxes with lots of existing text.
 - The preferences panel now displays correctly on the Mac even if
   general.useragent.locale has been modified.

Version ${Version} (${Date})
 - Added support for Songbird.
 - Added support for alpha versions of Firefox 3.1.
 - Added support for the googlebar, StumbleUpon, and Venkman extensions.
 - The first word typed into a rich textbox is no longer flipped around.
 - Fixed an issue where words beginning with Z were accepted.
 - Words that begin with Q but not QU are considered malformed.
 - Fixed an issue where special textboxes in Firefox, such as the search and
   find bars, could not be ignored.
 - Vinova can now be automatically disabled on webpages via a hidden preference.