@@ -48,40 +48,40 @@
 					</tabs>
 					<tabpanels>
 						<tabpanel id="input-panel" orient="vertical">
-	<notificationbox id="general-note" flex="1">
-							<hbox align="center">
-								<label accesskey="&method-menu.accesskey;" control="method-menu" observes="disabled-bc">&method-menu.label;</label>
-								<menulist id="method-menu" preference="method-pref" observes="disabled-bc">
-									<menupopup>
-										<menuitem id="method-auto-item" value="0" label="&method-auto-item.label;" />
-										<menuitem id="method-telex-item" value="1" label="&method-telex-item.label;" />
-										<menuitem id="method-vni-item" value="2" label="&method-vni-item.label;" />
-										<menuitem id="method-viqr-item" value="3" label="&method-viqr-item.label;" />
-										<menuitem id="method-viqr-star-item" value="4" label="&method-viqr-star-item.label;" />
-									</menupopup>
-								</menulist>
-							</hbox>
-							
-							<checkbox id="spell-check" preference="spell-pref" label="&spell-check.label;" accesskey="&spell-check.accesskey;" observes="disabled-bc" oncommand="options.validateForSpellingEnforced(); return true;" />
-							<vbox id="spell-options-box" class="indent">
-								<checkbox id="informal-check" preference="informal-pref" label="&informal-check.label;" accesskey="&informal-check.accesskey;" observes="spell-options-bc" />
-							</vbox>
-							<checkbox id="oldaccents-check" preference="oldaccents-pref" label="&oldaccents-check.label;" accesskey="&oldaccents-check.accesskey;" observes="disabled-bc" />
-							
-							<separator class="thin" />
-							
-							<label observes="disabled-bc">&auto-methods.label;</label>
-							<vbox id="auto-methods-box" class="indent"><!-- Turn this into an <hbox> once this panel gets longer. -->
-								<checkbox id="auto-telex-check" preference="auto-telex-pref" label="&method-auto-item.label;" accesskey="&auto-telex-check.accesskey;" observes="disabled-bc" />
-								<checkbox id="auto-vni-check" preference="auto-vni-pref" label="&method-vni-item.label;" accesskey="&auto-vni-check.accesskey;" observes="disabled-bc" />
-								<checkbox id="auto-viqr-check" preference="auto-viqr-pref" label="&method-viqr-item.label;" accesskey="&auto-viqr-check.accesskey;" observes="disabled-bc" />
-								<checkbox id="auto-viqr-star-check" preference="auto-viqr-star-pref" label="&method-viqr-star-item.label;" accesskey="&auto-viqr-star-check.accesskey;" observes="disabled-bc" />
-							</vbox>
-							
-							<separator class="thin" />
-							
-							<checkbox id="script-enabled-check" preference="script-enabled-pref" label="&script-enabled-check.label;" accesskey="&script-enabled-check.accesskey;" observes="disabled-bc" />
-	</notificationbox>
+							<notificationbox id="general-note" flex="1">
+								<hbox align="center">
+									<label accesskey="&method-menu.accesskey;" control="method-menu" observes="disabled-bc">&method-menu.label;</label>
+									<menulist id="method-menu" preference="method-pref" observes="disabled-bc">
+										<menupopup>
+											<menuitem id="method-auto-item" value="0" label="&method-auto-item.label;" />
+											<menuitem id="method-telex-item" value="1" label="&method-telex-item.label;" />
+											<menuitem id="method-vni-item" value="2" label="&method-vni-item.label;" />
+											<menuitem id="method-viqr-item" value="3" label="&method-viqr-item.label;" />
+											<menuitem id="method-viqr-star-item" value="4" label="&method-viqr-star-item.label;" />
+										</menupopup>
+									</menulist>
+								</hbox>
+								
+								<checkbox id="spell-check" preference="spell-pref" label="&spell-check.label;" accesskey="&spell-check.accesskey;" observes="disabled-bc" oncommand="options.validateForSpellingEnforced(); return true;" />
+								<vbox id="spell-options-box" class="indent">
+									<checkbox id="informal-check" preference="informal-pref" label="&informal-check.label;" accesskey="&informal-check.accesskey;" observes="spell-options-bc" />
+								</vbox>
+								<checkbox id="oldaccents-check" preference="oldaccents-pref" label="&oldaccents-check.label;" accesskey="&oldaccents-check.accesskey;" observes="disabled-bc" />
+								
+								<separator class="thin" />
+								
+								<label observes="disabled-bc">&auto-methods.label;</label>
+								<hbox id="auto-methods-box" class="indent">
+									<checkbox id="auto-telex-check" preference="auto-telex-pref" label="&method-auto-item.label;" accesskey="&auto-telex-check.accesskey;" observes="disabled-bc" />
+									<checkbox id="auto-vni-check" preference="auto-vni-pref" label="&method-vni-item.label;" accesskey="&auto-vni-check.accesskey;" observes="disabled-bc" />
+									<checkbox id="auto-viqr-check" preference="auto-viqr-pref" label="&method-viqr-item.label;" accesskey="&auto-viqr-check.accesskey;" observes="disabled-bc" />
+									<checkbox id="auto-viqr-star-check" preference="auto-viqr-star-pref" label="&method-viqr-star-item.label;" accesskey="&auto-viqr-star-check.accesskey;" observes="disabled-bc" />
+								</hbox>
+								
+								<separator class="thin" />
+								
+								<checkbox id="script-enabled-check" preference="script-enabled-pref" label="&script-enabled-check.label;" accesskey="&script-enabled-check.accesskey;" observes="disabled-bc" />
+							</notificationbox>
 						</tabpanel>
 						
 						<tabpanel id="ignored-panel" orient="vertical">
