@@ -133,4 +133,5 @@ Version ${Version} (${Date})
  - Words that begin with Q but not QU are considered malformed.
  - Fixed an issue where special textboxes in Firefox, such as the search and
    find bars, could not be ignored.
+ - Fixed an issue where some in-page scripts would not be disabled.
  - Vinova can now be automatically disabled on webpages via a hidden preference.
